--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,4 @@
+
 # Node.js
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
@@ -16,6 +17,9 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+npm config set user 0
+npm config set unsafe-perm true
+
     npm install
     npm run build
     npm run test
