Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,7 @@ steps:
 - script: |
 
     sudo npm install -g
-    npm config set user 0
-    npm config set unsafe-perm true
+    npm run
     sudo npm run build
     sudo npm run test
 - task: PublishTestResults@2
