Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,10 @@ trigger:
 - master
 
 pool:
-  vmImage: windows-latest
+  name: localwindows
+
+jobs:
+- job: BuildJob
 
 steps:
 - task: NodeTool@0
