Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
     versionSpec: '10.x'
   displayName: 'Installing the Node.js into the local windows'
 
-- script: mybuild
+- script: 
        npm install -g
         echo '$(System.DefaultWorkingDirectory)'
           dir
