Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,10 @@ steps:
 
 - script: |
     npm run test
-  displayName: 'npm test'
+  displayName: 'npm --publish test'
 
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**RunResults*.xml'
+    testResultsFiles: '**/RunResults*.xml'
   displayName: 'Publish the Test results'
