--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,5 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**\RunResults*.xml'
+    testResultsFiles: 'junit-report.xml'
   displayName: 'Publish the Test results'
