--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,6 @@ steps:
 
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'JUnit'
     testResultsFiles: 'junit-report.xml'
+    searchFolder: .
   displayName: 'Publish the Test results'
