Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
   displayName: 'npm install'
 
 - script: |
-    npm run test
+    npm run test --publish
   displayName: 'npm --publish test'
 
 - task: PublishTestResults@2
