--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
 
 - task: PublishTestResults@2
   inputs:
-    testResultsFiles: 'junit-report.xml'
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/RunResults*.json'
     searchFolder: .
   displayName: 'Publish the Test results'
