--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,8 @@ steps:
     testResultsFormat: 'JUnit'
     testResultsFiles: '**/reports/junit_style_report.xml'
     searchFolder: .
-  displayName: 'Publish the Test results'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathToPublish: '**/Results/'
+    artifactName: HtmlReport
