--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: 'RunResults/'
-    artifactName: HtmlReport
+    artifactName: runresults.html
+    displayName: 'Publish UFT Developer HTML Report'
