Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,4 +35,5 @@ steps:
   inputs:
     pathToPublish: 'RunResults/'
     artifactName: runresults.html
+    publishLocation: Container
     displayName: 'Publish UFT Developer HTML Report'
