Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,4 @@ steps:
 - task: PublishHtmlReport@1
   inputs:
     reportDir: 'RunResults/runresults.html'
-    tabName: 'UFTDeveloper'
+    tabName: 'UFT Developer Results'
